@@ -112,6 +112,7 @@ Version 1.13.0-dev:
    * Fix bug #21931: controllers bugged in (basic campaign) when networked
    * Fix bug #21883: make sure movement animations don't cycle with fog on
    * Fix bug #21316: make subframes within standing animations cycle by default
+   * Fix bug #21967: fix crash when unit modification to traits has empty id
 
 Version 1.11.11:
  * Add-ons server:
